# cthulhu

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  cthulhu.c
src/: main.rs
